<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Image Searcher</string>
    <string name="action_settings">Settings</string>
    <string name="enter_search_term">Enter Search Term</string>
    <string name="title_activity_search_options">Advanced search options</string>
    <string name="image_size">Image Size</string>
    <string-array name="image_size_values">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>
    <string name="color_filter">Color Filter</string>
    <string-array name="color_filter_values">
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>while</item>
        <item>yellow</item>
    </string-array>
    <string name="image_type">Image Type</string>
    <string-array name="image_type_values">
        <item>faces</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
    <string name="site_filter">Site filter</string>
    <string name="bt_Save">Save</string>
    <string name="btSearcu">Search</string>
    <string name="btLoadMore">Load more results</string>

</resources>
