<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchOptionsActivity" >

    <TextView
        android:id="@+id/tvMainTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/title_activity_search_options"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!--  IMAGE SIZE -->
    
    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
		android:paddingTop="10dp"
		android:paddingRight="8dp"
        android:layout_below="@+id/tvMainTitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/image_size" />
    

    <Spinner
        android:id="@+id/spImageSize"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMainTitle"
        android:layout_toEndOf="@+id/tvImageSize"
        android:layout_centerVertical="true"
        android:entries="@array/image_size_values"  />

    <!--  COLOR FILTER -->
    
    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
		android:paddingTop="10dp"
		android:paddingRight="8dp"
        android:layout_below="@+id/tvImageSize"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/color_filter" />
    

    <Spinner
        android:id="@+id/spColorFilter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvImageSize"
        android:layout_toEndOf="@+id/tvColorFilter"
        android:layout_centerVertical="true"
        android:entries="@array/color_filter_values"  />

     <!--  IMAGE TYPE -->
    
    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
		android:paddingTop="10dp"
		android:paddingRight="8dp"
        android:layout_below="@+id/tvColorFilter"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/image_type" />
    
    <Spinner
        android:id="@+id/spImageType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvColorFilter"
        android:layout_toEndOf="@+id/tvImageType"
        android:layout_centerVertical="true"
        android:entries="@array/image_type_values"  /> 
        
    <!--  SITE FILTER -->
    
    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
		android:paddingTop="10dp"
		android:paddingRight="8dp"
        android:layout_below="@+id/tvImageType"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/site_filter" />
    
    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvImageType"
        android:layout_toEndOf="@+id/tvSiteFilter"
        android:layout_centerVertical="true" />

    

    <!-- SAVE BUTTON -->
    
    <Button
        android:id="@+id/btSaveSearchFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="onClickSave"
        android:text="@string/bt_Save" />

   

</RelativeLayout>